--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,6 +1,10 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
+\begin{center}
+    \chapter{Введение}
+\end{center}
+
 Одной из наиболее актуальных проблем современной прикладной физики является
 получение источников когерентного излучения терагерцового (THz) диапазона. Такие
 источники могли бы использоваться во множестве медицинских приложений, ввиду достаточно 
