--- a/sections/myComputations.tex
+++ b/sections/myComputations.tex
@@ -2,9 +2,9 @@
 
 \begin{document}
     \begin{center}
-        \subsection{Рассчет минимальной энергии Оже-процесса}
+        \chapter{Рассчет минимальной энергии Оже-процесса}
     \end{center}
-
+    \section{Общие соотношения}
     Одним из способов увеличения интенсивности стимулированного излучения является повышение разности насселенностей,
     что в случае подобных структур приводит к задаче увеличения времени жизни носителей заряда,
     для как можно большей эффективности процесса излучательной рекомбинации. 
@@ -19,11 +19,10 @@
 
     При этом индексы $i,j$ - нумеруют типы квазичастиц (дырки или электроны). Все квазичастицы могут находиться в разных подзонах, иначе говоря
     в данном случае не существует какого-то дополнительного закона сохранения, связанного с отбором некоторых веток дисперсионного соотношени.
-    $\vec{k}_{1i},~\vec{k}_{2i},~\vec{k}_{1j}$ - импульсы начальных частиц, $\vec{k}_{3i}$
-    - конечной.
-
+    $\vec{k}_{1i},~\vec{k}_{2i},~\vec{k}_{1j}$ - импульсы начальных частиц, $\vec{k}_{3i}$ - конечной.
 
     
+
 
     Здесь $i,j$ - типы квазичастиц (дырки и электроны), $\vec{k}_{1i},~\vec{k}_{2i},~\vec{k}_{1j}$ - импульсы начальных частиц, $\vec{k}_{3i}$
     - конечной.
@@ -68,10 +67,12 @@
         \end{equation}
 
         С учетом условий:
-        %\bea
-        %    \vec{k}_1 + \vec{k}_2 + \vec{k}_j - \vec{k}_f = 0;\\
-        %    \varepsilon_1(\vec{k}_1) + \varepsilon_2(\vec{k}_2) + \varepsilon_j(\vec{k}_j) - \varepsilon_f(\vec{k}_f) = 0;
-        %\eea
+        \begin{equation}
+            \begin{array}{l}
+                \vec{k}_1 + \vec{k}_2 + \vec{k}_j - \vec{k}_f = 0;\\
+                \varepsilon_1(\vec{k}_1) + \varepsilon_2(\vec{k}_2) + \varepsilon_j(\vec{k}_j) - \varepsilon_f(\vec{k}_f) = 0;
+            \end{array}
+        \end{equation}
 
         Подставим закон сохранения импулься сразу и воспользуемся методом неопределённых множителей:
         \begin{equation}
@@ -84,26 +85,40 @@
             \nabla \varepsilon_1(\vec{k}_1) = \nabla \varepsilon_2(\vec{k}_2) = \nabla \varepsilon_h(\vec{k}_h);
         \end{equation}
         Это можно интерперетировать, как необходимость равенства групповых скоростей квазичастиц.
-        
-        В случае рассмотрения
-                прямозонной ситуации и небольших импульсов имеем 
-                    $\varepsilon (\vec k) = \frac{\hbar^2}{2} \vec k \widehat{m^{-1}} \vec k + \varepsilon_0$.
-                Тогда в силу симметричности тензора обратных масс получим $\nabla \varepsilon = \hbar^2 \widehat{m^{-1}} \vec k$.
 
         Теперь рассмотрим ситуацию изотропного дисперсионного соотношения $\varepsilon(\abs{\vec k})$,
         очевидно в таком случае для минимизации энергии требуется коллинеарность всех импульсов. 
         В таком случае можно достаточно просто численно определить пороговую энергию Оже процесса, что и было сделано.
 
+        Однако прежде рассмотрим вырожденный и важный случай - приближение изотропной эффективной массы.
+        В таком случае задача может быть решена аналитически. Выражения для начального импульса дырки
+        и пороговой энергии представлены ниже:
+
+        \begin{equation}
+            \begin{array}{l}
+                E_{th} = E_g \frac{m_c}{m_c ( 1 + m_c / m_v)};\\
+                p_{h} = \sqrt{\frac{2m_c E_g}{(1+ 2m_c/m_v)(1+ m_c / m_v)}};
+            \end{array}
+        \end{equation}
+
+        Этот случай важен в первую очередь потому, что в случае, если вторые производные дисперсионных соотношений не меняют знак
+        (т.е. производные растут монотонно), он может давать качественно верный результат, поскольку такие функции могут быть
+        неплохо аппроксимированны квадратичной в диапазоне $\frac{p^2}{2m} \leq T$ (что подразумевает низкую населенность состояний
+        с более высокой энергией).
+
+        Теперь рассмотрим случай уже более сложных дисперсионных соотношений.
         Для этого входные данные считываются и по ним строится интерполяция,
         в виде сплайна третьего порядка. В дальнейшем производится оптимизация функции с условием:
-        \begin{eqnarray}
-            \varkappa  = \varepsilon_f(k_1 + k_2 + k_h) - E_g;\\
-            \varepsilon_1(k_1) + \varepsilon_2(k_2) + \varepsilon_h(k_h) - \varepsilon_f(k_1 + k_2 + k_h);
-        \end{eqnarray}
+        \begin{equation}
+            \begin{array}{l}
+                \mathcal{X}  = \varepsilon_f(k_1 + k_2 + k_h) - E_g;\\
+                \varepsilon_1(k_1) + \varepsilon_2(k_2) + \varepsilon_h(k_h) - \varepsilon_f(k_1 + k_2 + k_h);
+            \end{array}
+        \end{equation}
 
         Также стоит отметить, что зачастую удобно использовать сплайны Акимы \cite{AkimaSplines}, поскольку они позволяют существенно уменьшить
-        численные артефакты, связанные с переколебаниями сплайна. Это позволяет значит увеличить точность вычислейний, а также убрать ложные
-        участки дисперсионного соотношения, имеющие необходимую радиальную компоненту градиента.
+        численные артефакты, связанные с переколебаниями сплайна. Это позволяет значительно увеличить точность вычислейний, а также убрать ложные
+        участки дисперсионного соотношения, имеющие необходимую (для минимума) радиальную компоненту градиента.
 
         Следует отметит, что ввиду наличия большого количества локальных минимумов функции процесс её оптимизации представляется далеко нетривиальной задачей.
         В ходе работы были опробованы различные методы глобальной оптимизации - основанные на стохастических процессах (метод роя частиц, метод 
@@ -165,9 +180,12 @@
         Можно видеть, что наличие дополнительных максимумов в дисперсионных соотношениях для электронов
         может значительно снижать порог Оже-процессов, за счет участия в рекомбинации квазичастиц с разными фазовыми,
         но одинаковыми групповыми скоростями. Это может приводить к существенно более быстрой зависимости
-        интенсивности фотолюминисцентного изулучения от температуры.
-
-        Причем в структурах с большим содержанием кадмия в квантовых ямах наблюдается тенденция к образованию
+        интенсивности фотолюминисцентного изулучения от температуры. Причем в структурах с большим содержанием кадмия в квантовых ямах наблюдается тенденция к образованию
         подобных побочных максимумов. 
+
+        Отметим, что пороговая энергия в процессе CHCC определяется в основном кинетической энергией дырки (за счет большей эффективной массы). 
+        Надо учесть, что кинетическая
+        энергия дырок в условиях инверсии населенности определяется не только температурой, но и положением квазиуровня Ферми в валентной 
+        зоне, это даёт некое размытие порога таких процессов.
     \newpage
 \end{document}
