--- a/sections/samplesDesign.tex
+++ b/sections/samplesDesign.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
     \begin{center}
-        \subsection{Дизайн гетероструктур}
+        \chapter{Дизайн гетероструктур}
     \end{center}
 
     Во многом дизайн рассматриваемых гетероструткур обусловлен технологическими особенностями их роста.
@@ -44,10 +44,10 @@
     что, с одной стороны, обуславливает возможность изучения образцов с одинаковой структурой, с другой - плохо влияет на воспроизводимость измерений,
     а также осложняет сравнение полученных результатов с теорией.
 
-    Возможно перспективным будет являться создание структур с легированием, что позволит искусственно повысить одного из типов носителей заряда и реализовать 
+    Возможно, перспективным будет являться создание структур с легированием, что позволит искусственно повысить одного из типов носителей заряда и реализовать 
     ситуацию в которой, вопреки дисперсионному соотношению будет превалировать тот или иной механизм Оже-рекомбинации. Это может быть полезным как с точки зрения 
     фундаментальных исследований, так и с точки зрения простоты оптимизации структур (можно будет заботиться о темпе рекомбинации всего по одному механизму). 
     Более того это может интересно в перспективе с позиции создания быстрых полупроводниковых детектеров, работающих в этой же области электромагнитного спектра 
     (в данном случае оже процессы будут играть уже положительную роль).
-    \newpage
+    
 \end{document}
