--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 % !TEX encoding = UTF-8 Unicode
+%!TEX option = --shell-escape
 \documentclass[a4paper, 14pt, russian]{extreport}
 \usepackage[a4paper]{geometry}
 \usepackage{lipsum}
@@ -16,6 +17,7 @@
 \usepackage{amssymb, amsmath}
 \usepackage{tikz}
 \usepackage{pgfplots}
+\usepackage{svg}
 
 \usepackage{cite}
 
@@ -57,7 +59,7 @@
 \hypersetup{linkcolor=red}
 
 %Установка метаданных
-\title{Отчет о дипломной работе}
+\title{Отчёт о дипломной работе}
 \author{Куликов Никита}
 \date{}
 
@@ -71,6 +73,13 @@
 
 \newcommand{\bea}{\begin{equation} \begin{flushleft} \left\{ \begin{aligned}}
 \newcommand{\eea}{\end{aligned} \right. \end{flushleft} \end{equation}}
+
+% Titlesec
+\usepackage{titlesec, blindtext, color} % подключаем нужные пакеты
+\definecolor{gray75}{gray}{0.75} % определяем цвет
+\newcommand{\hsp}{\hspace{20pt}} % длина линии в 20pt
+% titleformat определяет стиль
+\titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\Huge\bfseries}
 
 \begin{document}
     %Титульный лист
